# npapi-crypto-plugin

./: .fbgen.cfg  .travis.yml  CMakeLists.txt  README.md  addnewlines  common.cmd  common.sh  fbgen.py  fixtabs  prepVisualStudio.cmd  prepmac.sh  prepmake.sh  winprep.cmd
auto/: CabinetPlugin2_auto.wxs
cmake/: CMakeCache.txt  Win.cmake  wix.cmake
examples/EchoTestPlugin/Win/: projectDef.cmake
gen_templates/: fwh-chrome-manifest.json
includes/: ccom33.dll.sig  com.example.firewyrmhost.template
libs/winddk/Uninstall/: Uninstall.ini  icons.ini
libs/winddk/help/: winddk.col
projects/CabinetPlugin2/: CMakeLists.txt  CabinetPlugin2.cpp  CabinetPlugin2.h  CabinetPlugin2API.cpp  CabinetPlugin2API.h  Factory.cpp  PKI.h  PluginConfig.cmake  ProtocolApp.h  ProtocolAppDebugDefs.h  ProtocolAppDefs.h  ProtocolAppPrecompile.h  ProtocolDefs.h  XmlDSigHelper33.h  XmlDSigSigner33.h  XmlDSigVerificator33.h  cades.lib  ccom_32.lib  com.example.firewyrmhost.template
projects/CabinetPlugin2/CryptoPro/: MSTimeStamp.h  WinCryptEx.h  cades.h  cadescom.h  cadescom_i.c  capicom.h  capicom_i.c  cpstldll.h  pkivalidator.h  pkivalidator_i.c  tsp.h  tspcli.h  tspcli_e.h  tspcom.h  tspcom_i.c
projects/CabinetPlugin2/LzLib/: ArgArray.h  ErrorMessage.h  EventLog.h  StackUnknown.h  StdStreamProxy.h  StlComStreamProxy.h  Storage.h  lzexception.h  strmacro.h  xmldoc.h
projects/CabinetPlugin2/Mac/: projectDef.cmake
projects/CabinetPlugin2/Win/: projectDef.cmake
projects/CabinetPlugin2/X11/: projectDef.cmake
projects/CabinetPlugin2/_cpp/: CabinetDefs.h  CommonDefs.h  EnvelopingStream.h  FrsdAppInstance.h  FrsdApplication.h  FrsdDefs.h  SlotApp.h  SlotAppInstance.h  SlotAsn.h  SlotAsn_1.h  SlotCSP.h  SlotCSP_CCOM.h  SlotGlossary.h  SlotLowLevel.h  SlotPKI__.h  SlotRequestHandlerImpl.h  SlotSysUtil.h  SlotUtil.h  SlotXmlCtx.h  SlotXmlStructures.h  Ufml3Defs.h
projects/CabinetPlugin2/alg/: Alg_1_8_2.h  Alg_1_8_4.h  Alg_Common.h
projects/CabinetPlugin2/inet-proto/: AppInstance.h  Defs.h  (+12 more)
(+106 files in other folders)
